--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "type": "module",
   "main": "eslint.config.js",
   "scripts": {
-    "dev": "nodemon api/index.js",
-    "start": "node api/index.js",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+  "dev:backend": "nodemon api/index.js",
+  "dev:frontend": "vite",
+  "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+  "start": "node api/index.js",
+  "build": "vite build",
+  "preview": "vite preview"
+},
+
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.2",
     "env": "^0.0.2",
     "express": "^5.1.0",
